# ChangeLog for Gentoo System Intialization ("rc") scripts
# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPLv2

* baselayout-2.0.0_rc4 (02 Sep 2007)

  02 Sep 2007; Roy Marples <uberlord@gentoo.org>:

    RC_TTY_NUMBER now defaults to 12, #190996 thanks to Pacho Ramos.

  31 Aug 2007; Roy Marples <uberlord@gentoo.org>:

    Only generate dependencies for Gentoo scripts, #190547.

  28 Aug 2007; Roy Marples <uberlord@gentoo.org>:

	Undocument pause action, fix --nodeps and --ifstarted, #190045.
    Fix ksoftlevel handling, #190420.

  26 Aug 2007; Mike Frysinger <vapier@gentoo.org>:

    Add /etc/gentoo-release to CONFIG_PROTECT_MASK.

  25 Aug 2007; Mike Frysinger <vapier@gentoo.org>:

    Make sure we list all config files in rc help output.
    Punt PAGER and EDITOR.  People need to set this themselves now.

  22 Aug 2007; Roy Marples <uberlord@gentoo.org>:

    Only open /proc/cmdline if it exists, #189686 thanks to Christian Affolter.

  21 Aug 2007; Roy Marples <uberlord@gentoo.org>:

    Fix pppd getting the interface metric.

* baselayout-2.0.0_rc3 (20 Aug 2007)

  20 Aug 2007; Roy Marples <uberlord@gentoo.org>:

    As discussed on the -dev ml, RC_DEPEND_STRICT now defaults to yes.

  17 Aug 2007; Roy Marples <uberlord@gentoo.org>:

    Stop un-needed services when changing runlevels, #189050.

  15 Aug 2007; Roy Marples <uberlord@gentoo.org>:

    `config /etc/fstab' can now be used in depend() functions to show that
    the deptree should be regenerated if /etc/fstab has changed.
    Add bzr port 4155 to /etc/services, #188970 thanks to Andrew Cowie.

  08 Aug 2007; Roy Marples <uberlord@gentoo.org>:

    Add help to rc-update #188170.
    If given a pidfile, just match on that for seeing if we have crashed
    or not, #186159.

* baselayout-2.0.0_rc2 (04 Aug 2007)

  04 Aug 2007; Roy Marples <uberlord@gentoo.org>:

    Boot properly when we cannot set an early font, #187628.
    rc-update works again, #187487.
